fix: light mode card paragraph text readable

--- a/_includes/styles/variables.scss
+++ b/_includes/styles/variables.scss
@@ -59,7 +59,7 @@
   --link-hover: light-dark(#002970, #b5d4ff);
 
   --card-background: light-dark(#fafafa, #212121);
-  --card-paragraph: light-dark(#888, #ececec);
+  --card-paragraph: light-dark(var(--text), #ececec);
 
   --arrow-color: light-dark(#888, #fff);
 
